# qemu

./: .gitignore  .gitmodules  Dockerfile  QCE.md  crash-eba96ef2bc1ac41c304aef6286343f25b72e1098  linux.py  meson.build  meson_options.txt  run.py  shortcut.sh  utils.py
accel/tcg/: cpu-exec.c  meson.build  qce-call.inc  qce-cov.h  qce-debug.h  qce-expr-bin-op.h  qce-expr-cmp-op.h  qce-expr-ld-st.h  qce-expr-mov.h  qce-expr-uni-op.h  qce-expr.h  qce-ir.h  qce-op.inc  qce-state.h  qce-sym-bin.h  qce-sym-cmp.h  qce-sym-guest-ld-st.h  qce-sym-ld-st.h  qce-sym-mov.h  qce-sym-uni.h  qce-sym.h  qce-utils.h  qce-z3.h  qce.c  qce_z3.h  tcg-accel-ops-rr.c  tcg-accel-ops.c  translate-all.c
agent/: .gitignore  Makefile  common.h  guest.c  host.c
agent/guest/: .gitignore  Makefile  guest.c  init  init-test.c  init.c  utils.h
agent/host/: Cargo.toml
agent/host/fuzz/: .gitignore  Cargo.toml
agent/host/fuzz/fuzz_targets/: data_test.rs  fuzz_target_1.rs
agent/host/src/: fuzz.rs  lib.rs  main.rs  qemu.rs  utils.rs
hw/i386/: amd_iommu.c
include/qemu/: qce-config.h  qce.h  xxhash.h
include/sysemu/: tcg.h
include/system/: tcg.h
include/tcg/: tcg.h
migration/: qemu-file.c  ram.c  savevm.c
pycpio/: pycpio.py
pycpio/cpio/: archive.py  chardev.py  data.py  dir.py
pycpio/header/: cpioheader.py
pycpio/reader/: reader.py
pycpio/writer/: writer.py
scripts/: meson-buildoptions.sh
system/: main.c
tcg/: qce-debug.h  qce-ir.h  qce-op.inc  qce.c  tcg-common.c  tcg.c
tests/qce/e2e/: common.h
tests/qce/kernel/: config  v6.11.7-miniconfig
util/: cpuinfo-i386.c
(+8 files in other folders)
