[package]
name = "qce-agent-host"
description = "QCE agent on the host machine"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
inotify = "0.11.0"
libc = "0.2.161"
log = "0.4.22"
qapi = { version = "0.15.0", features = ["qmp"] }
structopt = "0.3.26"
