[package]
name = "qce-agent-host"
description = "QCE agent on the host machine"
version = "0.1.0"
authors = ["Meng Xu <meng.xu.cs@uwaterloo.ca>"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
inotify = "0.10.2"
libc = "0.2.154"
log = "0.4.21"
qapi = { version = "0.14.0", features = ["qmp"] }
structopt = "0.3.26"