[package]
name = "qce-agent-host-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.7"
env_logger = "0.11.3"
inotify = "0.10.2"
libc = "0.2.154"
log = "0.4.21"
qapi = { git = "https://github.com/arcnmx/qapi-rs.git", features = ["qmp"] }
structopt = "0.3.26"

[dependencies.qce-agent-host]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "data_test"
path = "fuzz_targets/data_test.rs"
test = false
doc = false
